--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http_server: ^1.0.0
   flutter_archive: ^4.2.0
   localstorage: ^4.0.0+1
+  system_tray: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/core/
+      - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
