--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
       - assets/core/
       - assets/core/public/
       - assets/core/public/assets/
+      - assets/core/win/
       - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
