--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
@@ -42,9 +42,9 @@ dependencies:
   http: ^0.13.4
   file_picker: ^4.5.1
   http_server: ^1.0.0
-  flutter_archive: ^4.2.0
+  flutter_archive: ^5.0.0
   localstorage: ^4.0.0+1
-  system_tray: ^0.1.0
+  system_tray: ^0.1.1
   url_launcher: ^6.0.20
   settings_yaml: ^3.4.0
 
@@ -57,7 +57,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
